--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^4.0.5",
+    "react-star-rating": "^1.4.2",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
